test_programs/compile_failure/noirc_frontend_tests_enums_missing_int_ranges/src/main.nr

        fn main() {
            let x: i8 = 3;
            match Opt::Some(x) {
                Opt::Some(4) => (),
                Opt::Some(6) => (),
            }
        }

        enum Opt<T> {
            None,
            Some(T),
        }
    